# game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
app/: CMakeLists.txt
app/assets/shaders/: fragment.glsl  vertex.glsl
app/src/: main.cpp  main_legacy.cpp
app/src/Components/: Spin.hpp
app/src/Core/: Application.hpp  Game.cpp  Game.hpp
app/src/Systems/: Movement.cpp  Movement.hpp  Rotation.cpp  Rotation.hpp
assets/shaders/: fragment.glsl  vertex.glsl
lib/: CMakeLists.txt
lib/assets/shaders/mesh/: fragment.glsl  vertex.glsl
lib/assets/shaders/skybox/: fragment.glsl  vertex.glsl
lib/include/Engine/: UInt.hpp
lib/include/Engine/Components/: Camera.hpp  Collider.hpp  Mass.hpp  Matrices.hpp  Mesh.hpp  Parent.hpp  Perspective.hpp  Physics.hpp  Transform.hpp
lib/include/Engine/Core/: App.hpp  Application.hpp  Arithmetic.hpp  Clock.hpp  Component.hpp  Entity.hpp  NewRegistry.hpp  Pointer.hpp  Registry.hpp  Registry.inl  State.hpp  System.hpp  Types.hpp  Window.hpp
lib/include/Engine/Graphics/: Color.hpp  Color.inl  Vertex.hpp
lib/include/Engine/Input/: Keyboard.hpp  Keyboard2.hpp  Mouse.hpp
lib/include/Engine/Maths/: Angle.hpp  Matrix4.hpp  Matrix4.inl  Quaternion.hpp  Radian.hpp  Vector2.hpp  Vector3.hpp  Vector3.inl
lib/include/Engine/Systems/: Gravity.hpp
lib/include/Engine/Types/: Scalar.hpp
lib/include/Engine/maths/: Vector3.hpp  Vector3.inl
lib/src/: main.cpp
lib/src/Components/: Mesh.cpp  TransformMatrix.hpp
lib/src/Core/: App.cpp  Application.cpp  NewRegistry.cpp  Registry.cpp  Registry.hpp  Registry.inl  System.cpp  Window.cpp
lib/src/Graphics/: Color.cpp  CubeMap.cpp  CubeMap.hpp  Material.cpp  Material.hpp  NewShader.cpp  NewShader.hpp  Program.cpp  Program.hpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureCube.cpp  TextureCube.hpp  VertexArray.cpp  VertexArray.hpp  VertexArrayCube.cpp  VertexArrayCube.hpp
lib/src/Input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp
lib/src/Maths/: Angle.cpp  Matrix4.cpp  Quaternion.cpp  Radian.cpp  Vector2.cpp  Vector3.cpp
lib/src/Platform/: File.cpp  File.hpp
lib/src/Systems/: Collision.cpp  Collision.hpp  Gravity.cpp  Renderer.cpp  Renderer.hpp  Simplex.hpp  Transformer.cpp  Transformer.hpp
lib/src/Types/: IsArithmetic.hpp
lib/src/components/: Mesh.hpp  Perspective.hpp  Transform.hpp  mesh.hpp  transform.hpp
lib/src/core/: app.cpp  app.hpp
lib/src/ecs/: registry.hpp  system.hpp
lib/src/graphics/: Color.cpp  shader.cpp
lib/src/math/: matrix.hpp  quaternion.cpp  quaternion.hpp  vector.cpp  vector.hpp
lib/src/maths/: Vector3.cpp  matrix.hpp  quaternion.hpp
lib/src/maths_legacy/: matrix.cpp  quaternion.cpp  radian.hpp
lib/src/systems/: renderer.cpp  renderer.hpp  transformer.cpp
lib/src/systems_legacy/: renderer.cpp
lib/src/types/: primitive.hpp  vertex.hpp
lib/src/types_legacy/: arithmetic.hpp  vertex.hpp
src/: main.cpp
src/components/: Component.hpp  MeshComponent.hpp  TransformComponent.hpp  mesh.hpp  perspective.hpp  transform.hpp
src/concepts/: ArithmeticType.hpp  ComponentType.hpp  SystemType.hpp
src/core/: State.hpp  app.cpp  app.hpp
src/core/App/: App.cpp
src/core/app/: app.cpp  app.hpp
src/ecs/: Component.hpp  Entity.hpp  System.hpp  component.hpp  registry.cpp  registry.hpp  system.hpp
src/ecs/Registry/: Registry.cpp  Registry.hpp
src/ecs/System/: System.hpp
src/graphics/: Color.cpp  Color.hpp  color.cpp  shader.hpp
src/maths/: matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  radian.hpp  vector.cpp  vector.hpp
src/maths/Matrix/: Matrix.cpp  Matrix.hpp
src/maths/Quaternion/: Quaternion.cpp  Quaternion.hpp
src/maths/Vector/: Vector.cpp  Vector.hpp
src/models/: Vector.cpp  Vector.hpp  Vertex.hpp  color.hpp  types.hpp  vertex.hpp
src/models/Matrix/: Matrix.cpp  Matrix.hpp
src/models/Quaternion/: Quaternion.cpp  Quaternion.hpp
src/models/Vector/: Vector.cpp  Vector.hpp
src/systems/: System.hpp  render-system.cpp  render-system.hpp  renderer.cpp  renderer.hpp  transform-system.cpp  transform-system.hpp  transformer.cpp  transformer.hpp
src/systems/RenderSystem/: RenderSystem.cpp  RenderSystem.hpp
src/systems/TransformSystem/: TransformSystem.cpp  TransformSystem.hpp
src/types/: composable.hpp  primitive.hpp  systemic.hpp  vertex.hpp
